<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mariescolor">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/sent_helped"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="10dp"
        android:text="@string/sent_share"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/sentBackHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:onClick="sentBackHome"
        android:text="@string/back_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/twitterButton"
        android:layout_width="60dp"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:onClick="shareButtonPressed"
        android:scaleType="centerCrop"
        android:tag="com.twitter.android"
        app:layout_constraintStart_toEndOf="@+id/facebookButton"
        app:layout_constraintTop_toTopOf="@+id/whatsappButton"
        app:srcCompat="@raw/twitter" />

    <ImageButton
        android:id="@+id/instagramButton"
        android:layout_width="60dp"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:onClick="shareButtonPressed"
        android:scaleType="centerCrop"
        android:tag="com.instagram.android"
        app:layout_constraintStart_toEndOf="@+id/twitterButton"
        app:layout_constraintTop_toTopOf="@+id/whatsappButton"
        app:srcCompat="@raw/instagram" />

    <ImageButton
        android:id="@+id/whatsappButton"
        android:layout_width="60dp"
        android:layout_height="64dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:onClick="shareButtonPressed"
        android:scaleType="centerCrop"
        android:tag="com.whatsapp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@raw/whatsapp" />

    <ImageButton
        android:id="@+id/facebookButton"
        android:layout_width="60dp"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:onClick="shareButtonPressed"
        android:scaleType="centerCrop"
        android:tag="com.facebook.orca"
        app:layout_constraintStart_toEndOf="@+id/whatsappButton"
        app:layout_constraintTop_toTopOf="@+id/whatsappButton"
        app:srcCompat="@raw/facebook" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/app_slogan"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="325dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/sentBackHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twitterButton"
        app:srcCompat="@drawable/shape3" />

    <ImageButton
        android:id="@+id/thumbsUp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@null"
        android:onClick="feedbackButtonPressed"
        android:tag="thumbsUp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/thumbsDown"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:srcCompat="@raw/thumbsup" />

    <ImageButton
        android:id="@+id/thumbsDown"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="15dp"
        android:background="@null"
        android:scaleType="centerInside"
        android:onClick="feedbackButtonPressed"
        android:tag="thumbsDown"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:srcCompat="@raw/thumbsdown" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/how_we_do"
        android:textColor="#4CAF50"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>