<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mariescolor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/letterMainTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@color/mariescolor"
                    android:gravity="center"
                    android:paddingLeft="15dp"
                    android:text="@string/reciever_confirmation"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/greetingSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/mariescolor"
                    android:paddingBottom="5dp" />

                <EditText
                    android:id="@+id/mainLetterTextV2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/shape"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/write_message"
                    android:inputType="textMultiLine"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/mariescolor"
                    android:paddingLeft="15dp"
                    android:text="@string/non_anon_expl"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/imageLayout"
                android:layout_width="match_parent"
                android:layout_height="91dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape2">

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="412dp"
                    android:layout_height="164dp"
                    android:background="@color/mariescolor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@null" />

                <ImageView
                    android:id="@+id/userImageViewV2"
                    android:layout_width="120dp"
                    android:layout_height="0dp"
                    android:adjustViewBounds="false"
                    android:background="@null"
                    android:paddingBottom="10dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView14"
                    app:layout_constraintEnd_toEndOf="@+id/imageView14"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView14"
                    app:srcCompat="@null"
                    tools:visibility="gone" />

                <ImageButton
                    android:id="@+id/addimageButV2"
                    android:layout_width="120dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:adjustViewBounds="false"
                    android:background="@null"
                    android:onClick="addImageButton"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView14"
                    app:srcCompat="@raw/add_photo" />

                <Button
                    android:id="@+id/changeImageV2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:onClick="addImageButton"
                    android:text="@string/change_image"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/userImageViewV2"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_horizontal|left|center_vertical"
                    android:background="@color/mariescolor"
                    android:gravity="start|center_vertical"
                    android:paddingLeft="25dp"
                    android:text="@string/deliver_opt"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/deliveryOptionBut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_horizontal|left|center_vertical"
                    android:background="@color/mariescolor"
                    android:gravity="start|center_vertical"
                    android:onClick="deliveryButtonPressed"
                    android:paddingLeft="25dp"
                    android:text="@string/please_choose"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </LinearLayout>

            <Button
                android:id="@+id/createContinueButV2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="createContinueButton"
                android:text="@string/continue_button" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>